--- a/css/black/skin.css
+++ b/css/black/skin.css
@@ -13,11 +13,14 @@ form, input, select, textarea {
 }
 
 fieldset.fbouter, fieldset.fbfieldset {
-  margin: 0 auto;
   background: #222222;
   position: relative;
   top: 50px;
   border: 1px solid #262626;
+  background-image: url();
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  border-radius: 0;
 }
 
 fieldset.fbouter h2 {
@@ -41,7 +44,8 @@ fieldset.fbfieldset legend.fblegend span.fblegendright
 fieldset.fbfieldset legend.fblegend span.fblegendright {
   background: transparent url(right.png) no-repeat right center;
 }
-fieldset.fbfieldset legend.fblegend {
+fieldset.fbfieldset legend.fblegend,
+legend.fbheader {
   color: #ffffff;
   font-size: 18px;
   text-transform: uppercase;
@@ -58,6 +62,7 @@ fieldset.fbfieldset li {
 }
 
 fieldset.fbfieldset input.fbtext,
+fieldset.fbfieldset input.fbpassword,
 fieldset.fbfieldset textarea.fbtextarea,
 fieldset.fbfieldset select.fbselect,
 fieldset.fbfieldset select.fbmultiselect,
